[gd_scene load_steps=4 format=3 uid="uid://d1cjcrivc6qia"]

[ext_resource type="Script" path="res://hud.gd" id="1_7dlwg"]
[ext_resource type="Texture2D" uid="uid://de8bxr0gxmes3" path="res://sprites.aseprite" id="2_aj825"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hl0e5"]
atlas = ExtResource("2_aj825")
region = Rect2(0, 16, 16, 16)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_7dlwg")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 31.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PollenHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PollenHBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_hl0e5")
stretch_mode = 3

[node name="PollenLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PollenHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="NectarHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/NectarHBox"]
self_modulate = Color(0, 1, 1, 1)
layout_mode = 2
texture = SubResource("AtlasTexture_hl0e5")
stretch_mode = 3

[node name="NectarLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/NectarHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HoneyHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HoneyHBox"]
self_modulate = Color(1, 0.556863, 0, 1)
layout_mode = 2
texture = SubResource("AtlasTexture_hl0e5")
stretch_mode = 3

[node name="HoneyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HoneyHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="RoyalJellyHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/RoyalJellyHBox"]
self_modulate = Color(1, 0, 1, 1)
layout_mode = 2
texture = SubResource("AtlasTexture_hl0e5")
stretch_mode = 3

[node name="RoyalJellyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/RoyalJellyHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
